Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18549

InnoDB: Failing assertion: opt_no_lock during mariabackup --backup ...

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.3
    • 10.4.3
    • Backup, mariabackup
    • None
    • Linux Ubuntu 17.10 but most probably unimportant

    Description

      Problem found during RQG testing of mariabackup.
      bb-10.4-monty, origin/bb-10.4-monty ea07b5227feeccba1429b687e731033e1a6d560b 2019-02-05T20:08:11+02:00
      One connection runs "chaotic" DDL.
      Another connection runs mariabackup.
      ...
      Executing backup: bld_debug/extra/mariabackup/mariabackup --host=127.0.0.1 --user=root --password=''  --innodb-use-native-aio=0  --port=19720 --backup --datadir=/dev/shm/vardir/1549967567/22/1/data --target-dir=/dev/shm/vardir/1549967567/22/1_clone/data
      2019-02-12 11:33:27 Connecting to MySQL server host: 127.0.0.1, user: root, password: set, port: 19720, socket: not set
      [00] 2019-02-12 11:33:27 Using server version 10.4.3-MariaDB-debug-log
      ...
      2019-02-12 11:33:31 0x7feefeb29740  InnoDB: Assertion failure in file extra/mariabackup/xtrabackup.cc line 647
      InnoDB: Failing assertion: opt_no_lock
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to https://jira.mariadb.org/
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: https://mariadb.com/kb/en/library/innodb-recovery-modes/
      InnoDB: about forcing recovery.
      190212 11:33:31 [ERROR] mysqld got signal 6 ;
      ...
      stack_bottom = 0x0 thread_stack 0x49000
      bld_debug/extra/mariabackup/mariabackup(my_print_stacktrace+0x40)[0x55beb64884f9]
      bld_debug/extra/mariabackup/mariabackup(handle_fatal_signal+0x3e7)[0x55beb5d58dce]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x13150)[0x7feefe726150]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7feefcfaa0bb]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x16d)[0x7feefcfabf5d]
      bld_debug/extra/mariabackup/mariabackup(+0x10308b9)[0x55beb61f98b9]
      bld_debug/extra/mariabackup/mariabackup(+0x6581a7)[0x55beb58211a7]
      bld_debug/extra/mariabackup/mariabackup(+0xec09e6)[0x55beb60899e6]
      bld_debug/extra/mariabackup/mariabackup(+0xec2ef4)[0x55beb608bef4]
      bld_debug/extra/mariabackup/mariabackup(+0xec6bce)[0x55beb608fbce]
      bld_debug/extra/mariabackup/mariabackup(+0xec7635)[0x55beb6090635]
      bld_debug/extra/mariabackup/mariabackup(+0x65b9fb)[0x55beb58249fb]
      bld_debug/extra/mariabackup/mariabackup(+0x65bcb1)[0x55beb5824cb1]
      ut/ut0mem.cc:42(ut_strlcpy(char*, char const*, unsigned long))[0x55beb582771e]
      mariabackup/xtrabackup.cc:649(backup_file_op_fail(unsigned long, unsigned char const*, unsigned char const*, unsigned long, unsigned char const*, unsigned long))[0x55beb5828612]
      log/log0recv.cc:493(fil_name_parse(unsigned char*, unsigned char const*, unsigned long, unsigned long, mlog_id_t, bool))[0x55beb582f7ae]
      log/log0recv.cc:1187(recv_parse_or_apply_log_rec_body(mlog_id_t, unsigned char*, unsigned char*, unsigned long, unsigned long, bool, buf_block_t*, mtr_t*))[0x55beb582effe]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf1)[0x7feefcf941c1]
      bld_debug/extra/mariabackup/mariabackup(_start+0x2a)[0x55beb581eaea]
       
      RQG YY grammar:
      query:
          ALTER TABLE t2 ADD PRIMARY KEY IF NOT EXISTS ( col2 , col_text(9) ) |
          ALTER TABLE t2 ADD PRIMARY KEY IF NOT EXISTS ( col_text(9) , col2 ) |
          ALTER TABLE t2 DROP PRIMARY KEY |
          ALTER TABLE t2 DROP PRIMARY KEY |
          ALTER TABLE t2 DROP PRIMARY KEY |
          ALTER TABLE t2 DROP PRIMARY KEY ;
       
      query_init:
          CREATE TABLE IF NOT EXISTS t2 ( col1 INT, col2 INT, col_int INTEGER , col_string VARCHAR(19), col_varchar VARCHAR(500), col_text TEXT ) ENGINE = InnoDB ROW_FORMAT = Compressed ; thread_connect ;
       
      thread_connect:
          SET AUTOCOMMIT = 0; SET SESSION lock_wait_timeout = 2 ; SET SESSION innodb_lock_wait_timeout = 1 ;
      

      Attachments

        1. 000000.log
          77 kB
          Matthias Leich
        2. MDEV-18549.yy
          0.6 kB
          Matthias Leich
        3. RQG_MDEV-18549.sh
          1 kB
          Matthias Leich

        Issue Links

          Activity

            People

              mleich Matthias Leich
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: